INT-31 Fix tests